[package]
name = "nxfuse"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
time = "*"
libc = "*"

[dependencies.fuse]
git = "https://github.com/zargony/rust-fuse.git"

[dependencies.nx]
git = "https://github.com/NoLifeDev/nx-rs.git"

[dependencies.debugln]
git = "https://github.com/crumblingstatue/rust-debug.git"
