[package]
name = "nxfuse"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
time = "*"
libc = "*"
image = "0.3.12"

[dependencies.fuse]

[dependencies.nx]
git = "https://github.com/NoLifeDev/nx-rs.git"

[dependencies.debugln]
git = "https://github.com/crumblingstatue/rust-debug.git"
