[package]
name = "nxfuse"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
time = "*"
libc = "*"
byteorder = "*"

[dependencies.fuse]

[dependencies.nx]
git = "https://github.com/NoLifeDev/nx-rs.git"

[dependencies.debugln]
git = "https://github.com/crumblingstatue/rust-debug.git"
